Trebuchet: Allow changing app suggestion settings
Change-Id: Ib077324ba6676a1b8e143b26c14bf0b6eb258d28

--- a/res/values/ev_strings.xml
+++ b/res/values/ev_strings.xml
@@ -23,4 +23,8 @@
 
     <!-- Folder titles -->
     <string name="google_folder_title" translatable="false">Google</string>
+
+    <!-- App suggestions -->
+    <string name="pref_suggestions_title">Suggestions</string>
+    <string name="pref_suggestions_summary">For app drawer &amp; home screen suggestions</string>
 </resources>
