--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -57,6 +57,12 @@
         android:title="@string/title_show_google_app" />
 
     <SwitchPreference
+        android:defaultValue="true"
+        android:key="pref_dock_search"
+        android:title="@string/dock_search_title"
+        android:summary="@string/dock_search_desc" />
+
+    <SwitchPreference
         android:key="pref_allapps_themed_icons"
         android:title="@string/pref_themed_icons_title"
         android:summary="@string/pref_themed_icons_summary"
