--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -43,6 +43,12 @@
         android:summary="@string/pref_show_google_now_summary"
         android:title="@string/title_show_google_app" />
 
+    <SwitchPreference
+        android:defaultValue="true"
+        android:key="pref_dock_search"
+        android:title="@string/dock_search_title"
+        android:summary="@string/dock_search_desc" />
+
     <androidx.preference.PreferenceScreen
         android:key="pref_suggestions"
         android:title="@string/pref_suggestions_title"
